@@ -1,13 +1,18 @@
 package de.tum.in.www1.artemis.service;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
-import javax.annotation.Nullable;
-import javax.validation.constraints.NotNull;
+import jakarta.annotation.Nullable;
+import jakarta.validation.constraints.NotNull;
 
+import org.hibernate.Hibernate;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
 import de.tum.in.www1.artemis.domain.*;
@@ -15,20 +20,18 @@ import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.BuildPlanType;
 import de.tum.in.www1.artemis.domain.enumeration.FeedbackType;
 import de.tum.in.www1.artemis.domain.exam.Exam;
-import de.tum.in.www1.artemis.domain.participation.Participation;
-import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseParticipation;
-import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
-import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
+import de.tum.in.www1.artemis.domain.participation.*;
 import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.security.Role;
 import de.tum.in.www1.artemis.service.connectors.lti.LtiNewResultService;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.websocket.ResultWebsocketService;
 
+@Profile(PROFILE_CORE)
 @Service
 public class ResultService {
 
-    private final Logger log = LoggerFactory.getLogger(ResultService.class);
+    private static final Logger log = LoggerFactory.getLogger(ResultService.class);
 
     private final UserRepository userRepository;
 
@@ -60,13 +63,18 @@ public class ResultService {
 
     private final StudentExamRepository studentExamRepository;
 
+    private final LongFeedbackTextRepository longFeedbackTextRepository;
+
+    private final BuildLogEntryService buildLogEntryService;
+
     public ResultService(UserRepository userRepository, ResultRepository resultRepository, Optional<LtiNewResultService> ltiNewResultService,
             ResultWebsocketService resultWebsocketService, ComplaintResponseRepository complaintResponseRepository, RatingRepository ratingRepository,
-            FeedbackRepository feedbackRepository, ComplaintRepository complaintRepository, ParticipantScoreRepository participantScoreRepository,
-            AuthorizationCheckService authCheckService, ExerciseDateService exerciseDateService,
+            FeedbackRepository feedbackRepository, LongFeedbackTextRepository longFeedbackTextRepository, ComplaintRepository complaintRepository,
+            ParticipantScoreRepository participantScoreRepository, AuthorizationCheckService authCheckService, ExerciseDateService exerciseDateService,
             TemplateProgrammingExerciseParticipationRepository templateProgrammingExerciseParticipationRepository,
             SolutionProgrammingExerciseParticipationRepository solutionProgrammingExerciseParticipationRepository,
-            ProgrammingExerciseStudentParticipationRepository programmingExerciseStudentParticipationRepository, StudentExamRepository studentExamRepository) {
+            ProgrammingExerciseStudentParticipationRepository programmingExerciseStudentParticipationRepository, StudentExamRepository studentExamRepository,
+            BuildLogEntryService buildLogEntryService) {
         this.userRepository = userRepository;
         this.resultRepository = resultRepository;
         this.ltiNewResultService = ltiNewResultService;
@@ -74,6 +82,7 @@ public class ResultService {
         this.complaintResponseRepository = complaintResponseRepository;
         this.ratingRepository = ratingRepository;
         this.feedbackRepository = feedbackRepository;
+        this.longFeedbackTextRepository = longFeedbackTextRepository;
         this.complaintRepository = complaintRepository;
         this.participantScoreRepository = participantScoreRepository;
         this.authCheckService = authCheckService;
@@ -82,6 +91,7 @@ public class ResultService {
         this.solutionProgrammingExerciseParticipationRepository = solutionProgrammingExerciseParticipationRepository;
         this.programmingExerciseStudentParticipationRepository = programmingExerciseStudentParticipationRepository;
         this.studentExamRepository = studentExamRepository;
+        this.buildLogEntryService = buildLogEntryService;
     }
 
     /**
@@ -104,9 +114,9 @@ public class ResultService {
         result.getFeedbacks().forEach(feedback -> feedback.setResult(result));
 
         // this call should cascade all feedback relevant changed and save them accordingly
-        var savedResult = resultRepository.save(result);
+        resultRepository.save(result);
         // The websocket client expects the submission and feedbacks, so we retrieve the result again instead of using the save result.
-        savedResult = resultRepository.findByIdWithEagerSubmissionAndFeedbackElseThrow(result.getId());
+        var savedResult = resultRepository.findWithSubmissionAndFeedbackAndTeamStudentsByIdElseThrow(result.getId());
 
         // if it is an example result we do not have any participation (isExampleResult can be also null)
         if (Boolean.FALSE.equals(savedResult.isExampleResult()) || savedResult.isExampleResult() == null) {
@@ -267,7 +277,9 @@ public class ResultService {
         results.forEach(result -> {
             boolean isBeforeDueDateOrAutomaticAndBeforeLatestDueDate = participationBeforeDueDate
                     || (AssessmentType.AUTOMATIC.equals(result.getAssessmentType()) && beforeLatestDueDate);
-            result.filterSensitiveFeedbacks(isBeforeDueDateOrAutomaticAndBeforeLatestDueDate);
+            if (Hibernate.isInitialized(result.getFeedbacks())) {
+                result.filterSensitiveFeedbacks(isBeforeDueDateOrAutomaticAndBeforeLatestDueDate);
+            }
 
             boolean assessmentTypeSetAndNonAutomatic = result.getAssessmentType() != null && result.getAssessmentType() != AssessmentType.AUTOMATIC;
             boolean beforeAssessmentDueDate = !ExerciseDateService.isAfterAssessmentDueDate(exercise);
@@ -275,7 +287,9 @@ public class ResultService {
             // A tutor is allowed to access all feedback, but filter for a student the manual feedback if the assessment due date is not over yet
             if (assessmentTypeSetAndNonAutomatic && beforeAssessmentDueDate) {
                 // filter all non-automatic feedbacks
-                result.getFeedbacks().removeIf(feedback -> feedback.getType() != FeedbackType.AUTOMATIC);
+                if (Hibernate.isInitialized(result.getFeedbacks())) {
+                    result.getFeedbacks().removeIf(feedback -> feedback.getType() != FeedbackType.AUTOMATIC);
+                }
             }
         });
     }
@@ -291,7 +305,9 @@ public class ResultService {
             }
         }
         for (Result result : results) {
-            result.filterSensitiveFeedbacks(!shouldResultsBePublished);
+            if (Hibernate.isInitialized(result.getFeedbacks())) {
+                result.filterSensitiveFeedbacks(!shouldResultsBePublished);
+            }
         }
     }
 
@@ -310,10 +326,11 @@ public class ResultService {
         else if (planKey.endsWith("-" + BuildPlanType.SOLUTION.getName())) {
             return solutionProgrammingExerciseParticipationRepository.findByBuildPlanIdWithResults(planKey).orElse(null);
         }
-        List<ProgrammingExerciseStudentParticipation> participations = programmingExerciseStudentParticipationRepository.findByBuildPlanId(planKey);
+        List<ProgrammingExerciseStudentParticipation> participations = programmingExerciseStudentParticipationRepository
+                .findWithResultsAndExerciseAndTeamStudentsByBuildPlanId(planKey);
         ProgrammingExerciseStudentParticipation participation = null;
         if (!participations.isEmpty()) {
-            participation = participations.get(0);
+            participation = participations.getFirst();
             if (participations.size() > 1) {
                 // in the rare case of multiple participations, take the latest one.
                 for (ProgrammingExerciseStudentParticipation otherParticipation : participations) {
@@ -389,17 +406,58 @@ public class ResultService {
         return result;
     }
 
+    /**
+     * Get a map of result ids to their availability of build log files.
+     *
+     * @param results the results for which to check the availability of build logs
+     * @return a map of result ids to their availability of build log files
+     */
+    public Map<Long, Boolean> getLogsAvailabilityForResults(List<Result> results) {
+        Map<Long, Boolean> logsAvailability = new HashMap<>();
+        for (Result result : results) {
+            if (buildLogEntryService.resultHasLogFile(result.getId().toString())) {
+                logsAvailability.put(result.getId(), true);
+            }
+            else {
+                logsAvailability.put(result.getId(), false);
+            }
+        }
+        return logsAvailability;
+    }
+
     @NotNull
     private List<Feedback> saveFeedbackWithHibernateWorkaround(@NotNull Result result, List<Feedback> feedbackList) {
         // Avoid hibernate exception
         List<Feedback> savedFeedbacks = new ArrayList<>();
+        // Collect ids of feedbacks that have long feedback.
+        List<Long> feedbackIdsWithLongFeedback = feedbackList.stream().filter(feedback -> feedback.getId() != null && feedback.getHasLongFeedbackText()).map(Feedback::getId)
+                .toList();
+        // Get long feedback list from the database.
+        List<LongFeedbackText> longFeedbackTextList = longFeedbackTextRepository.findByFeedbackIds(feedbackIdsWithLongFeedback);
+
+        // Convert list to map for accessing later.
+        Map<Long, LongFeedbackText> longLongFeedbackTextMap = longFeedbackTextList.stream()
+                .collect(Collectors.toMap(longFeedbackText -> longFeedbackText.getFeedback().getId(), longFeedbackText -> longFeedbackText));
         feedbackList.forEach(feedback -> {
             // cut association to parent object
             feedback.setResult(null);
+            LongFeedbackText longFeedback = null;
+            // look for long feedback that parent feedback has and cut the association between them.
+            if (feedback.getId() != null && feedback.getHasLongFeedbackText()) {
+                longFeedback = longLongFeedbackTextMap.get(feedback.getId());
+                if (longFeedback != null) {
+                    feedback.clearLongFeedback();
+                }
+            }
             // persist the child object without an association to the parent object.
             feedback = feedbackRepository.saveAndFlush(feedback);
             // restore the association to the parent object
             feedback.setResult(result);
+
+            // restore the association of the long feedback to the parent feedback
+            if (longFeedback != null) {
+                feedback.setDetailText(longFeedback.getText());
+            }
             savedFeedbacks.add(feedback);
         });
         return savedFeedbacks;
