@@ -1,5 +1,6 @@
 package de.tum.in.www1.artemis.service;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 import static de.tum.in.www1.artemis.domain.enumeration.FeedbackType.*;
 import static de.tum.in.www1.artemis.domain.enumeration.TutorParticipationStatus.*;
 import static de.tum.in.www1.artemis.service.TutorParticipationService.FeedbackCorrectionErrorType.*;
@@ -10,6 +11,7 @@ import java.util.stream.Stream;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -25,6 +27,7 @@ import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 /**
  * Service Implementation for managing TutorParticipation.
  */
+@Profile(PROFILE_CORE)
 @Service
 public class TutorParticipationService {
 
@@ -37,7 +40,7 @@ public class TutorParticipationService {
 
     private static final String ENTITY_NAME = "TutorParticipation";
 
-    private final Logger log = LoggerFactory.getLogger(TutorParticipationService.class);
+    private static final Logger log = LoggerFactory.getLogger(TutorParticipationService.class);
 
     private final ExampleSubmissionRepository exampleSubmissionRepository;
 
@@ -48,16 +51,7 @@ public class TutorParticipationService {
     /**
      * Wraps the information of tutor feedback validation (during tutor training).
      */
-    static class FeedbackCorrectionError {
-
-        public String reference;
-
-        public FeedbackCorrectionErrorType type;
-
-        public FeedbackCorrectionError(String reference, FeedbackCorrectionErrorType type) {
-            this.reference = reference;
-            this.type = type;
-        }
+    record FeedbackCorrectionError(String reference, FeedbackCorrectionErrorType type) {
     }
 
     public TutorParticipationService(TutorParticipationRepository tutorParticipationRepository, ExampleSubmissionRepository exampleSubmissionRepository,
@@ -181,7 +175,7 @@ public class TutorParticipationService {
                 throw new IllegalStateException("Multiple instructor feedback exist with the same reference");
             }
 
-            return tutorFeedbackMatchesInstructorFeedback(tutorFeedback, matchingInstructorFeedback.get(0));
+            return tutorFeedbackMatchesInstructorFeedback(tutorFeedback, matchingInstructorFeedback.getFirst());
         }
     }
 
@@ -266,7 +260,7 @@ public class TutorParticipationService {
             validateTutorialExampleSubmission(tutorExampleSubmission);
         }
 
-        List<ExampleSubmission> alreadyAssessedSubmissions = new ArrayList<>(existingTutorParticipation.getTrainedExampleSubmissions());
+        Set<ExampleSubmission> alreadyAssessedSubmissions = new HashSet<>(existingTutorParticipation.getTrainedExampleSubmissions());
 
         // If the example submission was already assessed, we do not assess it again, we just return the current participation
         if (alreadyAssessedSubmissions.contains(tutorExampleSubmission)) {
