@@ -1,13 +1,16 @@
 package de.tum.in.www1.artemis.service.exam;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
 import de.tum.in.www1.artemis.domain.Result;
@@ -24,10 +27,11 @@ import de.tum.in.www1.artemis.service.ResultService;
 import de.tum.in.www1.artemis.service.util.TimeLogUtil;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
+@Profile(PROFILE_CORE)
 @Service
 public class ExamQuizService {
 
-    static final Logger log = LoggerFactory.getLogger(ExamQuizService.class);
+    private static final Logger log = LoggerFactory.getLogger(ExamQuizService.class);
 
     private final QuizExerciseRepository quizExerciseRepository;
 
@@ -149,7 +153,7 @@ public class ExamQuizService {
      * 2. mark submission and participation as evaluated
      * 3. Create a new result for the selected submission and calculate scores
      * 4. Save the updated submission & participation and the newly created result
-     *
+     * <p>
      * After processing all participations, the created results will be returned for further processing
      * Note: We ignore test run participations
      * // @formatter:on
@@ -181,7 +185,7 @@ public class ExamQuizService {
 
                         // Load submission with highest id
                         submissionsList.sort(Comparator.comparing(Submission::getId).reversed());
-                        quizSubmission = (QuizSubmission) submissionsList.get(0);
+                        quizSubmission = (QuizSubmission) submissionsList.getFirst();
                     }
                     else {
                         quizSubmission = (QuizSubmission) submissions.iterator().next();
