@@ -1,10 +1,13 @@
 package de.tum.in.www1.artemis.service.hestia;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
 import de.tum.in.www1.artemis.domain.*;
@@ -19,6 +22,7 @@ import de.tum.in.www1.artemis.service.AuthorizationCheckService;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.errors.ConflictException;
 
+@Profile(PROFILE_CORE)
 @Service
 public class ExerciseHintService {
 
@@ -147,7 +151,7 @@ public class ExerciseHintService {
             return new HashSet<>();
         }
 
-        var latestResult = submissions.get(0).getLatestResult();
+        var latestResult = submissions.getFirst().getLatestResult();
 
         // latest submissions has no result or latest result has no feedback (most commonly due to a build error)
         if (latestResult == null || latestResult.getFeedbacks().isEmpty()) {
