@@ -1,23 +1,22 @@
 package de.tum.in.www1.artemis.service.hestia;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashSet;
-import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.errors.GitAPIException;
-import org.eclipse.jgit.diff.DiffEntry;
 import org.eclipse.jgit.treewalk.FileTreeIterator;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 import org.springframework.util.FileSystemUtils;
 
@@ -34,15 +33,17 @@ import de.tum.in.www1.artemis.repository.TemplateProgrammingExerciseParticipatio
 import de.tum.in.www1.artemis.repository.hestia.ProgrammingExerciseGitDiffReportRepository;
 import de.tum.in.www1.artemis.service.FileService;
 import de.tum.in.www1.artemis.service.connectors.GitService;
+import de.tum.in.www1.artemis.web.rest.GitDiffReportParserService;
 import de.tum.in.www1.artemis.web.rest.errors.InternalServerErrorException;
 
 /**
  * The service handling ProgrammingExerciseGitDiffReport and their ProgrammingExerciseGitDiffEntries.
  */
+@Profile(PROFILE_CORE)
 @Service
 public class ProgrammingExerciseGitDiffReportService {
 
-    private final Logger log = LoggerFactory.getLogger(ProgrammingExerciseGitDiffReportService.class);
+    private static final Logger log = LoggerFactory.getLogger(ProgrammingExerciseGitDiffReportService.class);
 
     private final GitService gitService;
 
@@ -58,12 +59,13 @@ public class ProgrammingExerciseGitDiffReportService {
 
     private final FileService fileService;
 
-    private final Pattern gitDiffLinePattern = Pattern.compile("@@ -(?<previousLine>\\d+)(,(?<previousLineCount>\\d+))? \\+(?<newLine>\\d+)(,(?<newLineCount>\\d+))? @@");
+    private final GitDiffReportParserService gitDiffReportParserService;
 
     public ProgrammingExerciseGitDiffReportService(GitService gitService, ProgrammingExerciseGitDiffReportRepository programmingExerciseGitDiffReportRepository,
             ProgrammingSubmissionRepository programmingSubmissionRepository, ProgrammingExerciseRepository programmingExerciseRepository,
             TemplateProgrammingExerciseParticipationRepository templateProgrammingExerciseParticipationRepository,
-            SolutionProgrammingExerciseParticipationRepository solutionProgrammingExerciseParticipationRepository, FileService fileService) {
+            SolutionProgrammingExerciseParticipationRepository solutionProgrammingExerciseParticipationRepository, FileService fileService,
+            GitDiffReportParserService gitDiffReportParserService) {
         this.gitService = gitService;
         this.programmingExerciseGitDiffReportRepository = programmingExerciseGitDiffReportRepository;
         this.programmingSubmissionRepository = programmingSubmissionRepository;
@@ -71,6 +73,7 @@ public class ProgrammingExerciseGitDiffReportService {
         this.templateProgrammingExerciseParticipationRepository = templateProgrammingExerciseParticipationRepository;
         this.solutionProgrammingExerciseParticipationRepository = solutionProgrammingExerciseParticipationRepository;
         this.fileService = fileService;
+        this.gitDiffReportParserService = gitDiffReportParserService;
     }
 
     /**
@@ -78,7 +81,7 @@ public class ProgrammingExerciseGitDiffReportService {
      * If there were no changes since the last report was created this will not do anything.
      * If there were changes to at least one of the repositories a new report will be created.
      * This method should not be called twice for the same programming exercise at the same time, as this will result in
-     * the creation of 2 reports. See https://github.com/ls1intum/Artemis/pull/4893 for more information about it.
+     * the creation of 2 reports. See <a href="https://github.com/ls1intum/Artemis/pull/4893">Artemis 4893</a> for more information about it.
      *
      * @param programmingExercise The programming exercise
      * @return The git-diff report for the given programming exercise
@@ -139,7 +142,7 @@ public class ProgrammingExerciseGitDiffReportService {
             return null;
         }
         else if (reports.size() == 1) {
-            return reports.get(0);
+            return reports.getFirst();
         }
         // Error handling in case more than one reports exist for the exercise
         var latestReport = reports.stream().max(Comparator.comparing(DomainObject::getId)).get();
@@ -180,7 +183,7 @@ public class ProgrammingExerciseGitDiffReportService {
         var templateParticipation = templateProgrammingExerciseParticipationRepository.findByProgrammingExerciseId(exercise.getId()).orElseThrow();
         Repository templateRepo = prepareTemplateRepository(templateParticipation);
 
-        var repo1 = gitService.checkoutRepositoryAtCommit(((ProgrammingExerciseParticipation) submission.getParticipation()).getVcsRepositoryUrl(), submission.getCommitHash(),
+        var repo1 = gitService.checkoutRepositoryAtCommit(((ProgrammingExerciseParticipation) submission.getParticipation()).getVcsRepositoryUri(), submission.getCommitHash(),
                 false);
         var oldTreeParser = new FileTreeIterator(templateRepo);
         var newTreeParser = new FileTreeIterator(repo1);
@@ -198,7 +201,7 @@ public class ProgrammingExerciseGitDiffReportService {
      * @param localPathRepoB local path to the checked out instance of the second repo to compare
      * @return cumulative number of lines in the git diff of given repositories
      */
-    public int calculateNumberOfDiffLinesBetweenRepos(VcsRepositoryUrl urlRepoA, Path localPathRepoA, VcsRepositoryUrl urlRepoB, Path localPathRepoB) {
+    public int calculateNumberOfDiffLinesBetweenRepos(VcsRepositoryUri urlRepoA, Path localPathRepoA, VcsRepositoryUri urlRepoB, Path localPathRepoB) {
         var repoA = gitService.getExistingCheckedOutRepositoryByLocalPath(localPathRepoA, urlRepoA);
         var repoB = gitService.getExistingCheckedOutRepositoryByLocalPath(localPathRepoB, urlRepoB);
 
@@ -208,7 +211,7 @@ public class ProgrammingExerciseGitDiffReportService {
         try (var diffOutputStream = new ByteArrayOutputStream(); var git = Git.wrap(repoB)) {
             git.diff().setOldTree(treeParserRepoB).setNewTree(treeParserRepoA).setOutputStream(diffOutputStream).call();
             var diff = diffOutputStream.toString();
-            return extractDiffEntries(diff, true).stream().mapToInt(ProgrammingExerciseGitDiffEntry::getLineCount).sum();
+            return gitDiffReportParserService.extractDiffEntries(diff, true).stream().mapToInt(ProgrammingExerciseGitDiffEntry::getLineCount).sum();
         }
         catch (IOException | GitAPIException e) {
             log.error("Error calculating number of diff lines between repositories: urlRepoA={}, urlRepoB={}.", urlRepoA, urlRepoB, e);
@@ -228,7 +231,7 @@ public class ProgrammingExerciseGitDiffReportService {
     private ProgrammingExerciseGitDiffReport generateReport(TemplateProgrammingExerciseParticipation templateParticipation,
             SolutionProgrammingExerciseParticipation solutionParticipation) throws GitAPIException, IOException {
         Repository templateRepo = prepareTemplateRepository(templateParticipation);
-        var solutionRepo = gitService.getOrCheckoutRepository(solutionParticipation.getVcsRepositoryUrl(), true);
+        var solutionRepo = gitService.getOrCheckoutRepository(solutionParticipation.getVcsRepositoryUri(), true);
         gitService.resetToOriginHead(solutionRepo);
         gitService.pullIgnoreConflicts(solutionRepo);
 
@@ -246,7 +249,7 @@ public class ProgrammingExerciseGitDiffReportService {
      * @throws GitAPIException If an error occurs while accessing the git repository
      */
     private Repository prepareTemplateRepository(TemplateProgrammingExerciseParticipation templateParticipation) throws GitAPIException {
-        var templateRepo = gitService.getOrCheckoutRepository(templateParticipation.getVcsRepositoryUrl(), true);
+        var templateRepo = gitService.getOrCheckoutRepository(templateParticipation.getVcsRepositoryUri(), true);
         gitService.resetToOriginHead(templateRepo);
         gitService.pullIgnoreConflicts(templateRepo);
         return templateRepo;
@@ -262,13 +265,13 @@ public class ProgrammingExerciseGitDiffReportService {
      * @throws IOException     If an error occurs while accessing the file system
      */
     public ProgrammingExerciseGitDiffReport generateReportForSubmissions(ProgrammingSubmission submission1, ProgrammingSubmission submission2) throws GitAPIException, IOException {
-        var repositoryUrl = ((ProgrammingExerciseParticipation) submission1.getParticipation()).getVcsRepositoryUrl();
-        var repo1 = gitService.getOrCheckoutRepository(repositoryUrl, true);
+        var repositoryUri = ((ProgrammingExerciseParticipation) submission1.getParticipation()).getVcsRepositoryUri();
+        var repo1 = gitService.getOrCheckoutRepository(repositoryUri, true);
         var repo1Path = repo1.getLocalPath();
         var repo2Path = fileService.getTemporaryUniqueSubfolderPath(repo1Path.getParent(), 5);
         FileSystemUtils.copyRecursively(repo1Path, repo2Path);
         repo1 = gitService.checkoutRepositoryAtCommit(repo1, submission1.getCommitHash());
-        var repo2 = gitService.getExistingCheckedOutRepositoryByLocalPath(repo2Path, repositoryUrl);
+        var repo2 = gitService.getExistingCheckedOutRepositoryByLocalPath(repo2Path, repositoryUri);
         repo2 = gitService.checkoutRepositoryAtCommit(repo2, submission2.getCommitHash());
         return parseFilesAndCreateReport(repo1, repo2);
     }
@@ -311,7 +314,7 @@ public class ProgrammingExerciseGitDiffReportService {
         try (ByteArrayOutputStream diffOutputStream = new ByteArrayOutputStream(); Git git = Git.wrap(repo1)) {
             git.diff().setOldTree(oldTreeParser).setNewTree(newTreeParser).setOutputStream(diffOutputStream).call();
             var diff = diffOutputStream.toString();
-            var programmingExerciseGitDiffEntries = extractDiffEntries(diff, false);
+            var programmingExerciseGitDiffEntries = gitDiffReportParserService.extractDiffEntries(diff, false);
             var report = new ProgrammingExerciseGitDiffReport();
             for (ProgrammingExerciseGitDiffEntry gitDiffEntry : programmingExerciseGitDiffEntries) {
                 gitDiffEntry.setGitDiffReport(report);
@@ -321,190 +324,8 @@ public class ProgrammingExerciseGitDiffReportService {
         }
     }
 
-    /**
-     * Extracts the ProgrammingExerciseGitDiffEntry from the raw git-diff output
-     *
-     * @param diff The raw git-diff output
-     * @return The extracted ProgrammingExerciseGitDiffEntries
-     */
-    private List<ProgrammingExerciseGitDiffEntry> extractDiffEntries(String diff, boolean useAbsoluteLineCount) {
-        var lines = diff.split("\n");
-        var parserState = new ParserState();
-
-        for (int i = 0; i < lines.length; i++) {
-            var line = lines[i];
-            // Filter out no new line message
-            if ("\\ No newline at end of file".equals(line)) {
-                continue;
-            }
-            var lineMatcher = gitDiffLinePattern.matcher(line);
-            if (lineMatcher.matches()) {
-                handleNewDiffBlock(lines, i, parserState, lineMatcher);
-            }
-            else if (!parserState.deactivateCodeReading) {
-                switch (line.charAt(0)) {
-                    case '+' -> handleAddition(parserState);
-                    case '-' -> handleRemoval(parserState, useAbsoluteLineCount);
-                    case ' ' -> handleUnchanged(parserState);
-                    default -> parserState.deactivateCodeReading = true;
-                }
-            }
-        }
-        if (!parserState.currentEntry.isEmpty()) {
-            parserState.entries.add(parserState.currentEntry);
-        }
-        return parserState.entries;
-    }
-
-    private void handleNewDiffBlock(String[] lines, int currentLine, ParserState parserState, Matcher lineMatcher) {
-        if (!parserState.currentEntry.isEmpty()) {
-            parserState.entries.add(parserState.currentEntry);
-        }
-        // Start of a new file
-        var newFilePath = getFilePath(lines, currentLine);
-        var newPreviousFilePath = getPreviousFilePath(lines, currentLine);
-        if (newFilePath != null || newPreviousFilePath != null) {
-            parserState.currentFilePath = newFilePath;
-            parserState.currentPreviousFilePath = newPreviousFilePath;
-        }
-        parserState.currentEntry = new ProgrammingExerciseGitDiffEntry();
-        parserState.currentEntry.setFilePath(parserState.currentFilePath);
-        parserState.currentEntry.setPreviousFilePath(parserState.currentPreviousFilePath);
-        parserState.currentLineCount = Integer.parseInt(lineMatcher.group("newLine"));
-        parserState.currentPreviousLineCount = Integer.parseInt(lineMatcher.group("previousLine"));
-        parserState.deactivateCodeReading = false;
-    }
-
-    private void handleUnchanged(ParserState parserState) {
-        var entry = parserState.currentEntry;
-        if (!entry.isEmpty()) {
-            parserState.entries.add(entry);
-        }
-        entry = new ProgrammingExerciseGitDiffEntry();
-        entry.setFilePath(parserState.currentFilePath);
-        entry.setPreviousFilePath(parserState.currentPreviousFilePath);
-
-        parserState.currentEntry = entry;
-        parserState.lastLineRemoveOperation = false;
-        parserState.currentLineCount++;
-        parserState.currentPreviousLineCount++;
-    }
-
-    private void handleRemoval(ParserState parserState, boolean useAbsoluteLineCount) {
-        var entry = parserState.currentEntry;
-        if (!parserState.lastLineRemoveOperation && !entry.isEmpty()) {
-            parserState.entries.add(entry);
-            entry = new ProgrammingExerciseGitDiffEntry();
-            entry.setFilePath(parserState.currentFilePath);
-            entry.setPreviousFilePath(parserState.currentPreviousFilePath);
-        }
-        if (entry.getPreviousLineCount() == null) {
-            entry.setPreviousLineCount(0);
-            entry.setPreviousStartLine(parserState.currentPreviousLineCount);
-        }
-        if (useAbsoluteLineCount) {
-            if (parserState.currentEntry.getLineCount() == null) {
-                parserState.currentEntry.setLineCount(0);
-                parserState.currentEntry.setStartLine(parserState.currentLineCount);
-            }
-            parserState.currentEntry.setLineCount(parserState.currentEntry.getLineCount() + 1);
-        }
-        else {
-            entry.setPreviousLineCount(entry.getPreviousLineCount() + 1);
-        }
-
-        parserState.currentEntry = entry;
-        parserState.lastLineRemoveOperation = true;
-        parserState.currentPreviousLineCount++;
-    }
-
-    private void handleAddition(ParserState parserState) {
-        if (parserState.currentEntry.getLineCount() == null) {
-            parserState.currentEntry.setLineCount(0);
-            parserState.currentEntry.setStartLine(parserState.currentLineCount);
-        }
-        parserState.currentEntry.setLineCount(parserState.currentEntry.getLineCount() + 1);
-
-        parserState.lastLineRemoveOperation = false;
-        parserState.currentLineCount++;
-    }
-
-    /**
-     * Extracts the file path from the raw git-diff for a specified diff block
-     *
-     * @param lines       All lines of the raw git-diff
-     * @param currentLine The line where the gitDiffLinePattern matched
-     * @return The file path of the current diff block
-     */
-    private String getFilePath(String[] lines, int currentLine) {
-        if (currentLine > 1 && lines[currentLine - 1].startsWith("+++ ") && lines[currentLine - 2].startsWith("--- ")) {
-            var filePath = lines[currentLine - 1].substring(4);
-            // Check if the filePath is /dev/null (which means the file was deleted) and instead return null
-            if (DiffEntry.DEV_NULL.equals(filePath)) {
-                return null;
-            }
-            // Git diff usually puts the two repos into the subfolders 'a' and 'b' for comparison, which we filter out here
-            if (filePath.startsWith("a/") || filePath.startsWith("b/")) {
-                return filePath.substring(2);
-            }
-        }
-        return null;
-    }
-
-    /**
-     * Extracts the previous file path from the raw git-diff for a specified diff block
-     *
-     * @param lines       All lines of the raw git-diff
-     * @param currentLine The line where the gitDiffLinePattern matched
-     * @return The previous file path of the current diff block
-     */
-    private String getPreviousFilePath(String[] lines, int currentLine) {
-        if (currentLine > 1 && lines[currentLine - 1].startsWith("+++ ") && lines[currentLine - 2].startsWith("--- ")) {
-            var filePath = lines[currentLine - 2].substring(4);
-            // Check if the filePath is /dev/null (which means the file was deleted) and instead return null
-            if (DiffEntry.DEV_NULL.equals(filePath)) {
-                return null;
-            }
-            // Git diff usually puts the two repos into the subfolders 'a' and 'b' for comparison, which we filter out here
-            if (filePath.startsWith("a/") || filePath.startsWith("b/")) {
-                return filePath.substring(2);
-            }
-        }
-        return null;
-    }
-
     private boolean canUseExistingReport(ProgrammingExerciseGitDiffReport report, String templateHash, String solutionHash) {
         return report.getTemplateRepositoryCommitHash().equals(templateHash) && report.getSolutionRepositoryCommitHash().equals(solutionHash);
     }
 
-    /**
-     * Helper class for parsing the raw git-diff
-     */
-    private static class ParserState {
-
-        private final List<ProgrammingExerciseGitDiffEntry> entries;
-
-        private String currentFilePath;
-
-        private String currentPreviousFilePath;
-
-        private ProgrammingExerciseGitDiffEntry currentEntry;
-
-        private boolean deactivateCodeReading;
-
-        private boolean lastLineRemoveOperation;
-
-        private int currentLineCount;
-
-        private int currentPreviousLineCount;
-
-        public ParserState() {
-            entries = new ArrayList<>();
-            currentEntry = new ProgrammingExerciseGitDiffEntry();
-            deactivateCodeReading = true;
-            lastLineRemoveOperation = false;
-            currentLineCount = 0;
-            currentPreviousLineCount = 0;
-        }
-    }
 }
