@@ -1,17 +1,18 @@
 package de.tum.in.www1.artemis.service.tutorialgroups;
 
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 import static de.tum.in.www1.artemis.web.rest.tutorialgroups.TutorialGroupResource.TutorialGroupImportErrors.MULTIPLE_REGISTRATIONS;
-import static javax.persistence.Persistence.getPersistenceUtil;
+import static jakarta.persistence.Persistence.getPersistenceUtil;
 
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import javax.annotation.Nullable;
-import javax.validation.constraints.NotNull;
+import jakarta.annotation.Nullable;
+import jakarta.validation.constraints.NotNull;
 
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
@@ -36,6 +37,7 @@ import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.tutorialgroups.TutorialGroupResource.TutorialGroupImportErrors;
 import de.tum.in.www1.artemis.web.rest.tutorialgroups.TutorialGroupResource.TutorialGroupRegistrationImportDTO;
 
+@Profile(PROFILE_CORE)
 @Service
 public class TutorialGroupService {
 
@@ -101,8 +103,9 @@ public class TutorialGroupService {
             tutorialGroup.setTeachingAssistantName(null);
         }
 
-        var channel = tutorialGroupChannelManagementService.getTutorialGroupChannel(tutorialGroup);
-        channel.ifPresent(value -> tutorialGroup.setChannel(conversationDTOService.convertChannelToDto(user, value)));
+        if (tutorialGroup.getTutorialGroupChannel() != null) {
+            tutorialGroup.setChannel(conversationDTOService.convertChannelToDTO(user, tutorialGroup.getTutorialGroupChannel()));
+        }
 
         this.setNextSession(tutorialGroup);
         this.setAverageAttendance(tutorialGroup);
@@ -134,11 +137,7 @@ public class TutorialGroupService {
                         && tutorialGroupSession.getEnd().isBefore(ZonedDateTime.now()))
                 .sorted(Comparator.comparing(TutorialGroupSession::getStart).reversed()).limit(3)
                 .map(tutorialGroupSession -> Optional.ofNullable(tutorialGroupSession.getAttendanceCount())).flatMap(Optional::stream).mapToInt(attendance -> attendance).average()
-                .ifPresentOrElse(value -> {
-                    tutorialGroup.setAverageAttendance((int) Math.round(value));
-                }, () -> {
-                    tutorialGroup.setAverageAttendance(null);
-                });
+                .ifPresentOrElse(value -> tutorialGroup.setAverageAttendance((int) Math.round(value)), () -> tutorialGroup.setAverageAttendance(null));
     }
 
     /**
@@ -153,12 +152,12 @@ public class TutorialGroupService {
             // we show currently running sessions and up to 30 minutes after the end of the session so that students can still join and tutors can easily update the attendance of
             // the session
             nextSessionOptional = tutorialGroup.getTutorialGroupSessions().stream().filter(session -> session.getStatus() == TutorialGroupSessionStatus.ACTIVE)
-                    .filter(session -> session.getEnd().plus(30, ChronoUnit.MINUTES).isAfter(ZonedDateTime.now())).min(Comparator.comparing(TutorialGroupSession::getStart));
+                    .filter(session -> session.getEnd().plusMinutes(30).isAfter(ZonedDateTime.now())).min(Comparator.comparing(TutorialGroupSession::getStart));
         }
         else {
             var nextSessions = tutorialGroupSessionRepository.findNextSessionsOfStatus(tutorialGroup.getId(), ZonedDateTime.now(), TutorialGroupSessionStatus.ACTIVE);
-            if (nextSessions.size() > 0) {
-                nextSessionOptional = Optional.of(nextSessions.get(0));
+            if (!nextSessions.isEmpty()) {
+                nextSessionOptional = Optional.of(nextSessions.getFirst());
             }
         }
         nextSessionOptional.ifPresent(tutorialGroupSession -> {
@@ -406,9 +405,7 @@ public class TutorialGroupService {
         var tutorialGroupsMentionedInRegistrations = new HashSet<>(foundTutorialGroups);
         tutorialGroupsMentionedInRegistrations.addAll(tutorialGroupRepository.saveAll(tutorialGroupsToCreate));
 
-        tutorialGroupsMentionedInRegistrations.forEach(tutorialGroup -> {
-            tutorialGroupChannelManagementService.createChannelForTutorialGroup(tutorialGroup);
-        });
+        tutorialGroupsMentionedInRegistrations.forEach(tutorialGroupChannelManagementService::createChannelForTutorialGroup);
 
         return tutorialGroupsMentionedInRegistrations;
     }
@@ -490,11 +487,11 @@ public class TutorialGroupService {
     }
 
     private Set<User> findUsersByRegistrationNumbers(Set<String> registrationNumbers, String groupName) {
-        return new HashSet<>(userRepository.findAllByRegistrationNumbersInGroup(groupName, registrationNumbers));
+        return new HashSet<>(userRepository.findAllWithGroupsByIsDeletedIsFalseAndGroupsContainsAndRegistrationNumberIn(groupName, registrationNumbers));
     }
 
     private Set<User> findUsersByLogins(Set<String> logins, String groupName) {
-        return new HashSet<>(userRepository.findAllByLoginsInGroup(groupName, logins));
+        return new HashSet<>(userRepository.findAllWithGroupsByIsDeletedIsFalseAndGroupsContainsAndLoginIn(groupName, logins));
 
     }
 
@@ -507,7 +504,8 @@ public class TutorialGroupService {
      */
     public Set<TutorialGroup> findAllForCourse(@NotNull Course course, @NotNull User user) {
         // do not load all sessions here as they are not needed for the overview page and would slow down the request
-        Set<TutorialGroup> tutorialGroups = tutorialGroupRepository.findAllByCourseIdWithTeachingAssistantAndRegistrations(course.getId());
+        Set<TutorialGroup> tutorialGroups = tutorialGroupRepository.findAllByCourseIdWithTeachingAssistantRegistrationsAndSchedule(course.getId());
+        // TODO: this is some overkill, we calculate way too many information with way too many database calls, we must reduce this
         tutorialGroups.forEach(tutorialGroup -> this.setTransientPropertiesForUser(user, tutorialGroup));
         tutorialGroups.forEach(tutorialGroup -> {
             if (!this.isAllowedToSeePrivateTutorialGroupInformation(tutorialGroup, user)) {
